# iccuthology

./: .env.example  .gitignore  AGENTS.md  CONTRACTS.md  DEPLOY-CONTRACTS.md  GEMINI.md  README.md  phish-predictor-deploy-plan.md  phish-predictor-modes-plan.md  pyproject.toml
.claude/: launch.json
.github/workflows/: publish.yml
agents/antigravity/: README.md  analyze_stats.py  gemini_3_1_pro_high_submit.py  make_drafts.py  make_predictions.py  make_predictions_pro.py  predict_3_1_pro.py  predict_gemini_3_1_pro.py  predict_gemini_3_5_flash_high.py  predict_gemini_3_6_flash_high.py  pro_pipeline.py  run_predictions_cron.py  submit_revised.py  verify_submissions.py  (+2 more)
data/: backtest_report.txt  deer_creek_predictions.txt
docs/: DEPLOY.md  MCP.md  llm-auto-predictor-plan.md  phish-predictor-plan.md  rotation-stats-deepdive.md
scripts/: api_agent_prototype.py  calibrate_cooldown.py  daily-predictions-prompt.md  gen_web_fixtures.py  make_predictions.py  r2_common.py  r2_pull.py  r2_push.py  r2_push_pointer.py  run-daily-predictions.ps1
tests/: test_api.py  test_backtest.py  test_epoch.py  test_features.py  test_heuristic.py  test_ingest.py  test_llm.py  test_mcp.py  test_ml.py  test_modes.py  test_notebook.py  test_personal.py  test_predict.py  test_predict_llm.py  test_publish.py  test_r2_scripts.py  test_samples_codec.py  test_score.py  test_setlist.py  test_simulate.py  test_slots.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+67 files in other folders)
