[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phish-predictor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "typer",
    "rich",
    "pandas",
    "scikit-learn",
    "lightgbm",
    "python-dotenv",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
deploy = ["boto3"]          # R2 push/pull (S3 API) for the publish workflow
mcp = ["mcp>=1.0"]          # phishpred-mcp agent submission server

[project.scripts]
phishpred = "phishpred.cli:main"
phishpred-mcp = "phishpred.mcp.server:main"

[dependency-groups]
dev = ["pytest", "boto3", "mcp>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/phishpred"]
